feat: add /ss set command to configure spawner properties and update related messages